# thesis-c-top2vec

./: .gitignore  download_model.py  indobart-00-gemini.py  indobart-00.py  indobart.py  pyproject.toml  topic-multilingual.py  topic.py
__marimo__/: topic.html  topic.ipynb
__marimo__/session/: indobart-00.py.json  indobart.py.json  topic.py.json
_top2vec/: __init__.py  top2vec.py
ctop2vec/: __init__.py  top2vec.py
old/: indobart-00-multi.py  topic.py  topic.py.backup
