[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "datasets>=4.4.2",
    "duckdb>=1.4.3",
    "marimo>=0.19.0",
    "mcp>=1",
    "nbformat>=5.10.4",
    "numba==0.63.1",
    "openai>=2.14.0",
    "polars[pyarrow]>=1.36.1",
    "pydantic>=2",
    "pydantic-ai>=1.48.0",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.14.0",
    "pyzmq>=27.1.0",
    "sqlglot>=28.5.0",
    "top2vec[sentence-transformers]>=1.0.36",
    "torch>=2.9.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.14",
]
